--- a/angular.json
+++ b/angular.json
@@ -80,6 +80,7 @@
               "browserTarget": "app:build:development"
             },
             "ci": {
+              "progress": false
             }
           },
           "defaultConfiguration": "development"
