--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
+    "ngx-image-cropper": "^7.0.2",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.1",
     "tslib": "^2.3.0",
